# AIFeedTracker

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  env.example  install_service.bat  main.py  pyproject.toml  restart_service.bat  run_background.bat  uninstall_service.bat
core/: __init__.py  logging_config.py
data/: README.md  bilibili_creators.json.example  bilibili_state.json.example
docs/: AI_SUMMARY_PROMPT.md  AI_SUMMARY_SETUP.md  BILIBILI_SETUP.md  COMMENT_FILTER_MODES.md  FEISHU_CARD_SETUP.md  README.md  博主更新订阅.card
services/: __init__.py  bilibili_auth.py  comment_fetcher.py  feishu.py  monitor.py
services/ai_summary/: __init__.py  ai_client.py  service.py  subtitle_fetcher.py  summary_generator.py
tests/: test_ai_summary.py  test_api.py  test_comment_fetcher.py  test_filter_modes.py  test_multi_rules.py  test_refresh_token.py  test_refresh_token_auto.py  test_system_notification.py
tools/: check_browser_info.py  manual_set_refresh_token.py
